tests/baselines/reference/exportAsNamespace3(module=umd).errors.txt
1.ts(2,1): error TS2448: Block-scoped variable 'ns' used before its declaration.
1.ts(3,1): error TS2448: Block-scoped variable 'ns' used before its declaration.


==== 0.ts (0 errors) ====
    export const a = 1;
    export const b = 2;
    
==== 1.ts (2 errors) ====
    export * as ns from './0';
    ns.a;
    ~~
!!! error TS2448: Block-scoped variable 'ns' used before its declaration.
!!! related TS2728 1.ts:4:5: 'ns' is declared here.
    ns.b;
    ~~
!!! error TS2448: Block-scoped variable 'ns' used before its declaration.
!!! related TS2728 1.ts:4:5: 'ns' is declared here.
    let ns = {a: 1, b: 2}
    ns.a;
    ns.b;
    
==== 2.ts (0 errors) ====
    import * as foo from './1'
    
    foo.ns.a;
    foo.ns.b;